@startuml
skinparam dpi 720
skinparam classAttributeIconSize 0
left to right direction
'skinparam nodesep 100


package domain {
    package models {
        class Auth {
            +userId: Long
            +accessToken: String
            +refreshToken: String
        }
        class Announcement {
            +id: Long
            +authorId: Long
            +description: String
            +file: String?
            +createdAt: Date
        }
        class Competition {
            +id: Long
            +poster: String
            +title: String
            +description: String
            +theme: String
            +city: String
            +country: String
            +deadline: Date
            +minimumFee: Long
            +maximumFee: Long
            +category: String
            +organizer: String
            +organizerName: String
            +createdAt: Date
        }
        class Invitation {
            +id: Long
            +inviterId: Long
            +inviteeId: Long
            +description: String
            +response: String
            +status: String
            +file: String?
            +createdAt: Date
        }
        class User {
            +id: Long
            +name: String
            +email: String
            +photo: String?
            +university: String?
            +department: String?
            +stream: String?
            +year: Int?
            +gender: String?
            +age: Int?
            +bio: String?
            +achievements: List<String>
            +certifications: List<String>
            +invitable: Boolean
            +status: String?
            +createdAt: Date
        }
    }
    package repository {
        interface AuthRepository {
            +signIn()
            +signUp()
            +signOut()
            +getAuth(): Flow<Auth?>
        }
        AuthRepository ..> Auth

        interface AnnouncementRepository {
            +save()
            +getAnnouncements():  Flow<List<Announcement>>
        }
        AnnouncementRepository ..> Announcement

        interface CompetitionRepository {
            +save()
            +getCompetition(): Flow<Competition?>
            +getCompetitions(): Flow<List<Competition>>
            +getFavorites(): List<Competition>
            +favorite()
            +unfavorite()
        }
        CompetitionRepository ..> Competition

        interface InvitationRepository {
            +invite()
            +respond()
            +getInvitation(): Invitation
        }
        InvitationRepository ..> Invitation

        interface UserRepository {
            +getUser(): Flow<User?>
            +getUsers(): Flow<List<User>>
            +getFriends(): List<User>
            +update()
            +requestFriendship()
            +acceptFriendship()
            +cancelFriendship()
            +favorite()
            +unfavorite()
            +getFavorites(): List<User>
        }
        UserRepository ..> User
    }
    package usecase {
'       Auth Use Case
        class SignInUseCase {
            +authRepository: AuthRepository
            +invoke()
        }
        class SignUpUseCase {
            +authRepository: AuthRepository
            +invoke()
        }
        class SignOutUseCase {
            +authRepository: AuthRepository
            +invoke()
        }
        class GetAuthUseCase {
            +authRepository: AuthRepository
            +invoke(): Flow<Auth?>
        }
        SignInUseCase o--> AuthRepository
        SignUpUseCase o--> AuthRepository
        SignOutUseCase o--> AuthRepository
        GetAuthUseCase o--> AuthRepository

'        Announcement Use Case
        class AddAnnouncementUseCase {
            +announcementRepository: AnnouncementRepository
            +invoke()
        }
        class GetAnnouncementsUseCase {
            +announcementRepository: AnnouncementRepository
            +userRepository: UserRepository
            +invoke(): List<Pair<Announcement, User>>
        }
        AddAnnouncementUseCase o--> AnnouncementRepository
        GetAnnouncementsUseCase o--> AnnouncementRepository
        GetAnnouncementsUseCase o--> UserRepository

'        Competition Use Case
        class PublishCompetitionUseCase {
            +competitionRepository: CompetitionRepository
            +invoke()
        }
        class GetCompetitionUseCase {
            +competitionRepository: CompetitionRepository
            +invoke(): Flow<Competition?>
        }
        class GetCompetitionsUseCase {
            +competitionRepository: CompetitionRepository
            +invoke(): Flow<List<Competition>>
        }
        class GetFavCompetitionsUseCase {
            +competitionRepository: CompetitionRepository
            +invoke(): Flow<List<Competition>>
        }
        class FavCompetitionUseCase {
            +competitionRepository: CompetitionRepository
            +invoke()
        }
        PublishCompetitionUseCase o--> CompetitionRepository
        GetCompetitionUseCase o--> CompetitionRepository
        GetCompetitionsUseCase o--> CompetitionRepository
        GetFavCompetitionsUseCase o--> CompetitionRepository
        FavCompetitionUseCase o--> CompetitionRepository

'        Invitation
        class CreateInvitationUseCase {
            +invitationRepository: InvitationRepository
            +invoke()
        }
        class RespondInvitationUseCase {
            +invitationRepository: InvitationRepository
            +invoke()
        }
        class GetInvitationUseCase {
            +invitationRepository: InvitationRepository
            +userRepository: UserRepository
            +invoke(): Flow<Triple<Invitation, User, User>>
        }
        CreateInvitationUseCase o--> InvitationRepository
        RespondInvitationUseCase o--> InvitationRepository
        GetInvitationUseCase o--> InvitationRepository
        GetInvitationUseCase o--> UserRepository
    }
}
@enduml
